--- a/test/fixtures/contacts.yml
+++ b/test/fixtures/contacts.yml
@@ -3,7 +3,13 @@
 one:
   name: MyString
   email: MyString
+  phone: MyString
+  city: MyString
+  message: MyText
 
 two:
   name: MyString
   email: MyString
+  phone: MyString
+  city: MyString
+  message: MyText
